# polybar-forecast

./: .gitignore  Cargo.toml  README.md  config.toml.example
src/: config.rs  main.rs  types.rs  weather.rs
