[package]
name = "polybar-forecast"
version = "0.2.0"
authors = ["Bertrand \"Kamek\" Bousquet <b.kamek@gmail.com>"]

[dependencies]
failure = "0.1.5"
serde = "1.0.87"
serde_qs = "0.4.5"
serde_json = "1.0.38"
serde_derive = "1.0.87"
reqwest = "0.9.9"
toml = "0.4.10"
openssl = { version = "0.10.16", features = ["vendored"] }
