[package]
name = "polybar-forecast"
version = "0.3.2"
authors = ["Bertrand \"Kamek\" Bousquet <b.kamek@gmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.87", features = ["derive"] }
serde_qs = "0.5.0"
serde_json = "1.0.38"
reqwest = "0.9.9"
toml = "0.5.1"
openssl = { version = "0.10.16", features = ["vendored"] }
